--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
 }
 
 h1 {
-  font-family: 'Dynapuff', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 64px;
   margin: 5px;
 }
@@ -75,9 +75,8 @@ input[type="number"] {
 }
 
 .timer-button {
-  font-family: 'Dynapuff', sans-serif;
-  font-size: 22px;
-  font-weight: bolder;
+  font-size: 28px;
+  font-weight: 700;
   text-transform: uppercase;
   padding: 10px 20px;
   border: none;
