--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@ h1 {
   margin: 5px;
 }
 
+button {
+  font-family: 'Roboto', sans-serif;
+}
+
 .timer-display {
   font-family: 'Inconsolata', monospace;
   font-size: 64px;
@@ -129,4 +133,146 @@ input[type="number"] {
 
 .emoji {
   font-size: 36px;
+}
+
+/* Styles for the History Icon Button */
+.history-icon {
+  background-color: transparent;
+  border: none;
+  max-height: fit-content;
+  font-size: 20px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.history-icon:hover {
+  transform: scale(1.2);
+}
+
+.history-icon:focus {
+  outline: none;
+}
+
+/* History Modal Styles */
+.history-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 2rem;
+  background: rgba(0, 0, 0, 0.80);
+  backdrop-filter: blur(1rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.history-modal h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* Flexbox layout for grouped history entries */
+.history-content {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  gap: 15px;
+  width: 100%;
+  max-width: 20rem;
+  padding: 1rem;
+}
+
+.day-entry {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.day-entry .date {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.history-items {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.history-item {
+  user-select: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  background: linear-gradient(to top, rgba(48, 39, 97, 0.7), rgba(60, 45, 150, 0.7));
+  backdrop-filter: blur(10px);
+  border-radius: 8px;
+}
+
+.history-item > .entry {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  font-size: 14px;
+}
+
+.history-item-label {
+  background-color: #3c2d96;
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 2px 5px;
+  width: fit-content;
+  border-radius: 0.25rem;
+}
+
+.close-modal {
+  background-color: #ff5c5c;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  max-width: 20rem;
+  font-size: 1rem;
+  margin-top: 20px;
+  transition: background-color 0.3s ease;
+}
+
+.close-modal:hover {
+  background-color: #ff2a2a;
+}
+
+/* Style for the scrollbar */
+::-webkit-scrollbar {
+  width: 8px; /* width of the scrollbar */
+  height: 8px; /* height of the scrollbar (for horizontal scroll) */
+}
+
+/* Style for the scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background-color: #19152f; /* color of the scrollbar thumb */
+  border-radius: 4px; /* rounded corners */
+}
+
+/* Hover effect for the scrollbar thumb */
+::-webkit-scrollbar-thumb:hover {
+  background-color:  #221957; /* darker shade on hover */
+}
+
+/* Hide the scrollbar track (the area the thumb moves along) */
+::-webkit-scrollbar-track {
+  background: transparent; /* make the track invisible */
+}
+
+/* Remove arrows */
+::-webkit-scrollbar-button {
+  display: none; /* hides the arrows */
 }
