--- a/src/App.css
+++ b/src/App.css
@@ -173,8 +173,14 @@ input[type="number"] {
 .history-modal h2 {
   font-family: 'Roboto', sans-serif;
   font-size: 2.5rem;
-  margin-bottom: 20px;
   text-align: center;
+}
+
+.modal-header {
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Flexbox layout for grouped history entries */
@@ -248,6 +254,20 @@ input[type="number"] {
 
 .close-modal:hover {
   background-color: #ff2a2a;
+}
+
+.clear-history-button {
+  background-color: #ffffff;
+  border: none;
+  padding: 0.5rem;
+  max-height: fit-content;
+  font-size: 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.clear-history-button:hover {
+  background-color: #ff1a1a;
 }
 
 /* Style for the scrollbar */
