--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,7 @@ input[type="number"] {
   font-family: 'Roboto', sans-serif;
   font-size: 2.5rem;
   text-align: center;
+  margin: 1rem 0;
 }
 
 .modal-header {
@@ -187,11 +188,13 @@ input[type="number"] {
 .history-content {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   overflow-y: auto;
   scroll-behavior: smooth;
   gap: 15px;
   width: 100%;
   max-width: 20rem;
+  transition: all 0.3s ease;
   padding: 1rem;
 }
 
@@ -264,10 +267,21 @@ input[type="number"] {
   font-size: 1rem;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .clear-history-button:hover {
-  background-color: #ff1a1a;
+  background-color: #ff5c5c;
+}
+
+.clear-history-button:focus {
+  outline: none;
+}
+
+.no-data-message {
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 1rem;
 }
 
 /* Style for the scrollbar */
