--- a/src/App.css
+++ b/src/App.css
@@ -248,6 +248,10 @@ input[type="number"] {
   font-size: 14px;
 }
 
+.history-item .entry span {
+  transition: color 0.5s ease;
+}
+
 .history-item-label {
   background-color: #3c2d96;
   box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
