--- a/src/App.css
+++ b/src/App.css
@@ -192,6 +192,7 @@ input[type="number"] {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  max-width: 20rem;
 }
 
 /* Flexbox layout for grouped history entries */
