--- a/src/pages/tracker/Tracker.css
+++ b/src/pages/tracker/Tracker.css
@@ -27,7 +27,7 @@
 h1,
 h2 {
   user-select: none;
-  font-family: "Chewy", sans-serif;
+  font-family: 'Chewy', sans-serif;
 }
 
 h1 {
@@ -36,7 +36,7 @@ h1 {
 }
 
 button {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 600;
   border-radius: 5px;
   border: none;
@@ -64,7 +64,7 @@ img {
 }
 
 .timer-display {
-  font-family: "Inconsolata", monospace;
+  font-family: 'Inconsolata', monospace;
   font-size: 64px;
   margin: 30px 20px 60px 20px;
 }
@@ -82,13 +82,13 @@ img {
   gap: 2px;
 }
 
-input[type="number"] {
+input[type='number'] {
   -webkit-appearance: none;
   -moz-appearance: textfield;
   appearance: none;
 
   margin: 0;
-  font-family: "Inconsolata", monospace;
+  font-family: 'Inconsolata', monospace;
   border: solid 1px white;
   outline: none;
   background-color: transparent;
@@ -121,6 +121,7 @@ input[type="number"] {
 .start {
   background-color: #ffa007;
 }
+
 .start:hover {
   background-color: #ffb428;
 }
@@ -128,6 +129,7 @@ input[type="number"] {
 .reset {
   background-color: #ff5c5c;
 }
+
 .reset:hover {
   background-color: #ff2a2a;
 }
@@ -136,7 +138,7 @@ input[type="number"] {
   background: linear-gradient(to top, #010f2a, #3c2d96);
 }
 
-.smoking_icon > img {
+.smoking_icon>img {
   width: 48px;
   height: 48px;
 }
@@ -228,11 +230,9 @@ input[type="number"] {
   display: flex;
   justify-content: space-between;
   padding: 15px;
-  background: linear-gradient(
-    to top,
-    rgba(48, 39, 97, 0.7),
-    rgba(60, 45, 150, 0.7)
-  );
+  background: linear-gradient(to top,
+      rgba(48, 39, 97, 0.7),
+      rgba(60, 45, 150, 0.7));
   box-shadow:
     5px 5px 5px 0px rgba(0, 0, 0, 0.5),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -240,7 +240,7 @@ input[type="number"] {
   border-radius: 8px;
 }
 
-.history-item > .entry {
+.history-item>.entry {
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -314,27 +314,34 @@ input[type="number"] {
 
 /* Style for the scrollbar */
 ::-webkit-scrollbar {
-  width: 8px; /* width of the scrollbar */
-  height: 8px; /* height of the scrollbar (for horizontal scroll) */
+  width: 8px;
+  /* width of the scrollbar */
+  height: 8px;
+  /* height of the scrollbar (for horizontal scroll) */
 }
 
 /* Style for the scrollbar thumb (the draggable part) */
 ::-webkit-scrollbar-thumb {
-  background-color: #19152f; /* color of the scrollbar thumb */
-  border-radius: 4px; /* rounded corners */
+  background-color: #19152f;
+  /* color of the scrollbar thumb */
+  border-radius: 4px;
+  /* rounded corners */
 }
 
 /* Hover effect for the scrollbar thumb */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #221957; /* darker shade on hover */
+  background-color: #221957;
+  /* darker shade on hover */
 }
 
 /* Hide the scrollbar track (the area the thumb moves along) */
 ::-webkit-scrollbar-track {
-  background: transparent; /* make the track invisible */
+  background: transparent;
+  /* make the track invisible */
 }
 
 /* Remove arrows */
 ::-webkit-scrollbar-button {
-  display: none; /* hides the arrows */
+  display: none;
+  /* hides the arrows */
 }
