--- a/src/components/loading/Loading.css
+++ b/src/components/loading/Loading.css
@@ -4,4 +4,6 @@
   align-items: center;
   flex-direction: column;
   text-align: center;
+  width: --webkit-fill-available;
+  height: --webkit-fill-available;
 }
