--- a/src/components/Loading.module.css
+++ b/src/components/Loading.module.css
@@ -1,9 +1,10 @@
-.loading-container {
+.LoadingContainer {
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
-  width: --webkit-fill-available;
-  height: --webkit-fill-available;
+  width: 100%;
+  height: 100%;
 }
