--- a/src/pages/settings/Settings.module.css
+++ b/src/pages/settings/Settings.module.css
@@ -25,11 +25,12 @@
   justify-content: space-between;
   gap: 1rem;
   padding: 0.25rem;
-
-
 }
 
 .SaveButtonContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   margin-top: auto;
   padding-top: 1rem;
 }
