--- a/src/components/BaseNumberField.module.css
+++ b/src/components/BaseNumberField.module.css
@@ -1,8 +1,3 @@
-
-:root {
-  --number-outline: #647183;
-}
-
 .Container {
   display: flex;
   flex-direction: column;
@@ -80,6 +75,12 @@
 
   &:active {
     background-color: #374151;
+  }
+
+  &:focus {
+    z-index: 1;
+    outline: 1px solid rgba(255, 255, 255, 0.25);
+    outline-offset: -1px;
   }
 }
 
