--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Custom Colors */
+  --number-outline: #647183;
 }
 
 a {
