--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,7 +1,12 @@
 .HomeContainer {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   gap: 1rem;
-  height: 100%;
+  height: -webkit-fill-available;
   overflow-x: hidden;
+}
+
+.ButtonContainer {
+  justify-self: flex-end;
 }
