--- a/src/pages/settings/Settings.module.css
+++ b/src/pages/settings/Settings.module.css
@@ -23,6 +23,24 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+.SettingsHeader {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  padding: 0 0 1rem 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.SectionHeader {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+
+.MaterialIcon {
+  margin: auto 0;
+}
+
 .SettingsItem {
   display: flex;
   align-items: center;
