a few more icons

--- a/src/features/userSettings/DeleteDataButton.module.css
+++ b/src/features/userSettings/DeleteDataButton.module.css
@@ -23,3 +23,10 @@
 .ConfirmBox > button {
   margin: 0.5rem;
 }
+
+.Button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
