--- a/src/pages/stats/Stats.module.css
+++ b/src/pages/stats/Stats.module.css
@@ -3,5 +3,14 @@
   flex-direction: column;
   gap: 1rem;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
+}
+
+.StatsContent {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  overflow-y: auto;
+  padding: 0.5rem;
 }
