--- a/src/layouts/Layout.module.css
+++ b/src/layouts/Layout.module.css
@@ -49,4 +49,16 @@
   padding: 0 0 0.5rem 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+  transform: translateZ(0);
+  backface-visibility: hidden;
+}
+
+.HeaderContent {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0 2rem;
 }
